--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button onclick="restart()" class="btn btn-danger" id="restart">Restart</button>
             <br><br>
             
-            <h4>Developed By : WhitehatJr Team</h4>
+            <h4>Developed By : Raghav</h4>
         
             <div id="myModal" class="modal fade ">
               <div class="modal-dialog" >
